--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     }
   .overlay {
   position: fixed; inset: 0;
-  background: linear-gradient(135deg, rgba(0,0,0,0.08), rgba(0,155,72,0.15)); /* ← MOONRISE VISIBLE */
-  backdrop-filter: blur(3px);
+  background: linear-gradient(135deg, rgba(0,0,0,0.04), rgba(0,155,72,0.08)); /* ← REDUCED */
+  backdrop-filter: blur(1.5px); /* ← LIGHTER BLUR */
   z-index: 1;
   pointer-events: none;
 }
