--- a/index.html
+++ b/index.html
@@ -155,18 +155,13 @@
     .btn.green { background: var(--green); color: #fff; border: 3.5px solid var(--gold); }
 .btn.back {
   position: fixed;
-  top: 88px;           /* ← Aligns with "E" in VIBE */
-  right: 20px;         /* ← Opposite from flag */
-  left: auto;
+  top: 88px; right: 20px; left: auto;
   background: transparent;
   border: 2.5px solid #FFD700;
   border-radius: 50%;
-  width: 44px;
-  height: 44px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
+  width: 44px; height: 44px;
+  display: flex; align-items: center; justify-content: center;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.3);
   z-index: 9999 !important;
   cursor: pointer;
   transition: all 0.3s ease;
@@ -177,11 +172,8 @@
   transform: scale(1.08);
 }
 .btn.back svg {
-  width: 20px;
-  height: 20px;
-  stroke: #FFD700;
-  stroke-width: 3;
-  fill: none;
+  width: 20px; height: 20px;
+  stroke: #FFD700; stroke-width: 3; fill: none;
 }
     .btn:active { transform: scale(0.93); }
 
