--- a/index.html
+++ b/index.html
@@ -319,7 +319,12 @@
 
     <!-- STEP 2.5: FLIGHT BOOKING -->
     <div id="step25" class="step">
-      <button class="btn back" id="back25">Back</button>
+      <button class="btn back" id="backX" onclick="goBack()" aria-label="Go back">
+  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" 
+       stroke="#FFD700" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
+    <path d="M19 12H5M12 19l-7-7 7-7" />
+  </svg>
+</button>
       <p class="msg">Book your flight?</p>
       <div class="option-card" data-flight="skip">
         <div class="info"><div class="name">No, I’ll book later</div></div>
