--- a/index.html
+++ b/index.html
@@ -335,7 +335,12 @@
 
     <!-- STEP 3 -->
     <div id="step3" class="step">
-      <button class="btn back" id="back3">Back</button>
+      <button class="btn back" id="backX" onclick="goBack()" aria-label="Go back">
+  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" 
+       stroke="#FFD700" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
+    <path d="M19 12H5M12 19l-7-7 7-7" />
+  </svg>
+</button>
       <p class="msg">Arrival & Departure</p>
       <input type="date" id="arriveDate">
       <input type="date" id="departDate">
@@ -363,7 +368,12 @@
 
     <!-- STEP 4 -->
     <div id="step4" class="step">
-      <button class="btn back" id="back4">Back</button>
+      <button class="btn back" id="backX" onclick="goBack()" aria-label="Go back">
+  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" 
+       stroke="#FFD700" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
+    <path d="M19 12H5M12 19l-7-7 7-7" />
+  </svg>
+</button>
       <p class="msg">What parish will you stay in?</p>
       <div id="parish-options"></div>
       <button class="btn green" id="parishNext" style="display:none">Next to Choose Vibe</button>
@@ -371,7 +381,12 @@
 
     <!-- STEP 5 -->
     <div id="step5" class="step">
-      <button class="btn back" id="back5">Back</button>
+      <button class="btn back" id="backX" onclick="goBack()" aria-label="Go back">
+  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" 
+       stroke="#FFD700" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
+    <path d="M19 12H5M12 19l-7-7 7-7" />
+  </svg>
+</button>
       <p class="msg">What vibe — Inland or Coastal?</p>
       <div class="option-card" data-value="coastal">
         <div class="info"><div class="name">Coastal</div></div>
@@ -384,7 +399,12 @@
 
     <!-- STEP 6 -->
     <div id="step6" class="step">
-      <button class="btn back" id="back6">Back</button>
+      <button class="btn back" id="backX" onclick="goBack()" aria-label="Go back">
+  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" 
+       stroke="#FFD700" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
+    <path d="M19 12H5M12 19l-7-7 7-7" />
+  </svg>
+</button>
       <p class="msg">Choose your stay</p>
       <div id="stay-options"></div>
       <button class="btn green" id="btnStay">Next to Transport</button>
@@ -392,7 +412,12 @@
 
     <!-- STEP 7 -->
     <div id="step7" class="step">
-      <button class="btn back" id="back7">Back</button>
+      <button class="btn back" id="backX" onclick="goBack()" aria-label="Go back">
+  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" 
+       stroke="#FFD700" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
+    <path d="M19 12H5M12 19l-7-7 7-7" />
+  </svg>
+</button>
       <p class="msg">Need a ride? (optional)</p>
       <div id="transport-options"></div>
       <button class="btn green" id="btnTransport">Next to Tours</button>
@@ -400,7 +425,12 @@
 
     <!-- STEP 8 -->
     <div id="step8" class="step">
-      <button class="btn back" id="back8">Back</button>
+      <button class="btn back" id="backX" onclick="goBack()" aria-label="Go back">
+  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" 
+       stroke="#FFD700" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
+    <path d="M19 12H5M12 19l-7-7 7-7" />
+  </svg>
+</button>
       <p class="msg">Add tours (optional)</p>
       <div id="tour-options"></div>
       <button class="btn green" id="btnTours">Show My Package</button>
