--- a/index.html
+++ b/index.html
@@ -438,7 +438,12 @@
 
     <!-- SUMMARY -->
     <div id="summary" class="step">
-      <button class="btn back" id="backSummary">Back</button>
+      <button class="btn back" id="backX" onclick="goBack()" aria-label="Go back">
+  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" 
+       stroke="#FFD700" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
+    <path d="M19 12H5M12 19l-7-7 7-7" />
+  </svg>
+</button>
       <p class="msg">Your YaadVibe Package</p>
       <div id="summary-items"></div>
       <div class="total">Total: $<span id="total">0.00</span></div>
