--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
   color: #FFD700;
   max-width: 140px;
   backdrop-filter: blur(14px);
-  box-shadow: 0 3px 16px rgba(255,215,0,0.35);
+  box-shadow: 0 3px 16px rgba(255,215,0,0.35), 0 0 12px rgba(255,215,0,0.5) !important;
   top: 14vh;
   z-index: 3;
   transition: all 0.4s ease;
@@ -175,7 +175,7 @@
 }
 .btn.back svg {
   width: 20px; height: 20px;
-  stroke: #FFD700; stroke-width: 3; fill: none;
+  stroke: #FFD700; stroke-width: 3.5; fill: none;
 }
     .btn:active { transform: scale(0.93); }
 
