--- a/index.html
+++ b/index.html
@@ -538,16 +538,33 @@ document.addEventListener('DOMContentLoaded', () => {
     }
   };
 
-  const updateProgress = () => {
-    const prog = document.getElementById('progress');
-    prog.innerHTML = '';
-    for (let i = 0; i < totalSteps; i++) {
-      const dot = document.createElement('div');
-      dot.className = 'progress-dot';
-      if (i === currentStep) dot.classList.add('active');
-      prog.appendChild(dot);
-    }
-  };
+  const PROGRESS_ICONS = ['Jamaica', 'Plane', 'Calendar', 'Pin', 'Palm', 'Hotel', 'Taxi', 'Star', 'Money'];
+
+const updateProgress = () => {
+  const prog = document.getElementById('progress');
+  prog.innerHTML = '';
+  const stepMap = [1, 2, 3, 4, 5, 6, 7, 8, 9]; // maps currentStep → icon index
+
+  PROGRESS_ICONS.forEach((icon, i) => {
+    const span = document.createElement('span');
+    span.className = 'prog-icon';
+    span.textContent = icon;
+    span.dataset.step = i;
+
+    // Map currentStep to icon index
+    const isActive = (currentStep === 0 && i === 0) || 
+                     (currentStep === 1 && i === 0) ||
+                     (currentStep >= 2 && stepMap[currentStep - 2] === i + 1);
+
+    const isDone = i < stepMap.findIndex(s => s > currentStep) || 
+                   (currentStep === 9 && i === 8);
+
+    if (isActive) span.classList.add('active');
+    if (isDone && !isActive) span.classList.add('done');
+
+    prog.appendChild(span);
+  });
+};
 
   const next = n => {
     document.querySelectorAll('.step').forEach(s => s.classList.remove('active'));
