--- a/index.html
+++ b/index.html
@@ -566,16 +566,9 @@ const updateProgress = () => {
   });
 };
 
-  const next = n => {
-    document.querySelectorAll('.step').forEach(s => s.classList.remove('active'));
-    const target = n === 9 ? document.getElementById('summary') : document.getElementById(n === 2.5 ? 'step25' : 'step' + n);
-    if (target) {
-      target.classList.add('active');
-      currentStep = n;
-      updateProgress();
-      updateCalc(true);
-    }
-  };
+ currentStep = n;
+if (n === 2.5) currentStep = 2; // treat 2.5 as step 2
+if (n === 9) currentStep = 9;   // summary
 
   const back = () => {
     if (currentStep > 0) next(currentStep - 1);
