--- a/index.html
+++ b/index.html
@@ -187,6 +187,42 @@
       background: rgba(255,255,255,0.3);
       transition: all 0.3s;
     }
+    .progress {
+  display: flex; justify-content: center; gap: 12px; margin: 1rem 0; flex-wrap: wrap;
+}
+.prog-icon {
+  width: 36px; height: 36px;
+  border-radius: 50%;
+  background: rgba(255,255,255,0.12);
+  display: flex; align-items: center; justify-content: center;
+  font-size: 18px;
+  transition: all 0.3s ease;
+  position: relative;
+  backdrop-filter: blur(4px);
+}
+.prog-icon.active {
+  background: var(--gold);
+  color: #000;
+  transform: scale(1.15);
+  box-shadow: 0 0 20px rgba(255,215,0,0.6);
+  animation: pulse 1.5s infinite;
+}
+.prog-icon.done::after {
+  content: 'Check';
+  position: absolute;
+  top: -6px; right: -6px;
+  width: 18px; height: 18px;
+  background: var(--green);
+  color: white;
+  border-radius: 50%;
+  font-size: 12px;
+  display: flex; align-items: center; justify-content: center;
+  border: 2px solid #000;
+}
+@keyframes pulse {
+  0%, 100% { box-shadow: 0 0 20px rgba(255,215,0,0.6); }
+  50% { box-shadow: 0 0 30px rgba(255,215,0,0.9); }
+}
     .progress-dot.active { background: var(--gold); transform: scale(1.3); }
 
     .step { display: none; width: 100%; animation: fade 0.55s ease-out; }
