--- a/index.html
+++ b/index.html
@@ -766,14 +766,19 @@ if (n === 9) currentStep = 9;   // summary
   // EVENT LISTENERS — CRITICAL ORDER
   document.getElementById('step1').addEventListener('click', e => {
     const card = e.target.closest('.option-card');
-    if (card) {
-      document.querySelectorAll('#step1 .option-card').forEach(c => c.classList.remove('selected'));
-      card.classList.add('selected');
-      state.isLocal = card.dataset.value === 'no';
-      next(2);
-      if (state.isLocal) renderParishes();
+  if (card) {
+  document.querySelectorAll('#step1 .option-card').forEach(c => c.classList.remove('selected'));
+  card.classList.add('selected');
+  state.isLocal = card.dataset.value === 'no';
+  
+  // Delay next() to ensure animation completes
+  setTimeout(() => {
+    next(2);
+    if (state.isLocal) {
+      setTimeout(renderParishes, 100); // Wait for Step 2 DOM
     }
-  });
+  }, 150);
+}
 
   document.getElementById('startBtn').addEventListener('click', () => {
     console.log("Start button clicked → going to step 1");
