--- a/index.html
+++ b/index.html
@@ -360,6 +360,248 @@ document.addEventListener('DOMContentLoaded', () => {
 
   // === ALL YOUR FUNCTIONS (renderParishes, loadStays, etc.) ===
   // ... [ALL 100% YOUR ORIGINAL LOGIC — UNTOUCHED & FIXED] ...
+const renderParishes = () => {
+    const c = document.getElementById('parish-options'); c.innerHTML = '';
+    ALL_PARISHES.forEach(p => {
+      const display = `${p.replace(/-/g,' ').replace(/\b\w/g, l => l.toUpperCase())} (${PARISH_TOWNS[p]})`;
+      const card = document.createElement('div');
+      card.className = 'option-card';
+      card.innerHTML = `<div class="info"><div class="name">${display}</div></div>`;
+      card.onclick = () => {
+        c.querySelectorAll('.option-card').forEach(x => x.classList.remove('selected'));
+        card.classList.add('selected');
+        state.parish = p;
+        document.getElementById('parishNext').style.display = 'block';
+      };
+      c.appendChild(card);
+    });
+  };
+
+  const loadStays = () => {
+    const c = document.getElementById('stay-options');
+    c.innerHTML = '<p style="text-align:center;color:#aaa">Finding your vibe...</p>';
+    setTimeout(() => {
+      c.innerHTML = '';
+      const items = LIVE_DATA.accommodations[state.parish] || LIVE_DATA.accommodations.default;
+      const filtered = state.vibe ? items.filter(i => i.type === state.vibe) : items;
+      filtered.forEach(item => {
+        const card = document.createElement('div');
+        card.className = 'option-card';
+        card.innerHTML = `
+          <img src="${item.img}" onerror="this.src='/IMG_0039.jpeg'" alt="${item.name}">
+          <div class="info">
+            <div class="name">${item.name}</div>
+            <div class="price">$${item.price}${item.source === 'Tour' ? '' : '/night'}</div>
+          </div>
+        `;
+        card.onclick = () => {
+          c.querySelectorAll('.option-card').forEach(x => x.classList.remove('selected'));
+          card.classList.add('selected');
+          state.stay = {...item, fee: Math.round(item.price * 0.05)};
+          updateCalc(true);
+        };
+        c.appendChild(card);
+      });
+    }, 600);
+  };
+
+  const loadTransport = () => {
+    const c = document.getElementById('transport-options'); c.innerHTML = '';
+    const opts = LIVE_DATA.transport[state.parish] || LIVE_DATA.transport.default;
+    opts.forEach(t => {
+      const card = document.createElement('div');
+      card.className = 'option-card';
+      card.innerHTML = `<div class="info"><div class="name">${t.name}</div><div class="price">$${t.price}</div></div>`;
+      card.onclick = () => {
+        card.classList.toggle('selected');
+        if (card.classList.contains('selected')) state.transport.push(t);
+        else state.transport = state.transport.filter(x => x.name !== t.name);
+        updateCalc(true);
+      };
+      c.appendChild(card);
+    });
+  };
+
+  const loadTours = () => {
+    const c = document.getElementById('tour-options'); c.innerHTML = '';
+    const opts = LIVE_DATA.tours[state.parish] || LIVE_DATA.tours.default;
+    opts.forEach(t => {
+      const card = document.createElement('div');
+      card.className = 'option-card';
+      card.innerHTML = `<div class="info"><div class="name">${t.name}</div><div class="price">$${t.price}</div></div>`;
+      card.onclick = () => {
+        card.classList.toggle('selected');
+        if (card.classList.contains('selected')) state.tours.push(t);
+        else state.tours = state.tours.filter(x => x.name !== t.name);
+        updateCalc(true);
+      };
+      c.appendChild(card);
+    });
+  };
+
+  const loadFlights = () => {
+    const c = document.getElementById('flight-options'); c.innerHTML = '';
+    const opts = LIVE_DATA.flights[state.from] || LIVE_DATA.flights.default;
+    opts.forEach(f => {
+      const card = document.createElement('div');
+      card.className = 'option-card';
+      card.innerHTML = `
+        <div class="info">
+          <div class="name">${f.airline} • ${f.code}</div>
+          <div class="price">$${f.price} roundtrip</div>
+        </div>
+      `;
+      card.onclick = () => {
+        document.querySelectorAll('#flight-options .option-card').forEach(x => x.classList.remove('selected'));
+        card.classList.add('selected');
+        state.flight = f;
+      };
+      c.appendChild(card);
+    });
+  };
+
+  const showSummary = () => {
+    const div = document.getElementById('summary-items'); div.innerHTML = '';
+    const add = (label, price, fee = 0) => {
+      div.innerHTML += `<div class="item"><span>${label}</span><span>$${price}${fee ? ` + <strong>$${fee}</strong> fee` : ''}</span></div>`;
+    };
+    if (state.stay) {
+      const base = state.stay.price * state.nights;
+      const occupancyFee = state.adults > 2 ? (state.adults - 2) * 50 : 0;
+      add(`${state.stay.name} (${state.nights} nights, ${state.adults}A/${state.kids}K)`, base + occupancyFee, Math.round(base * 0.05));
+    }
+    state.transport.forEach(t => add(t.name, t.price));
+    state.tours.forEach(t => add(t.name, t.price));
+    if (state.flight) add(`${state.flight.airline} Flight`, state.flight.price);
+    document.getElementById('total').textContent = total.toFixed(2);
+    next(9);
+  };
+
+  // PAYMENT
+  document.getElementById('btnPay').onclick = async () => {
+    if (total === 0) return alert("Add items first!");
+    if (!tonConnectUI) return alert("TON Wallet not available");
+
+    const finalTotal = total;
+    const payload = { ...state, total: finalTotal };
+
+    try {
+      const tx = {
+        validUntil: Math.floor(Date.now() / 1000) + 300,
+        messages: [{
+          address: "EQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAM9c",
+          amount: String(Math.round(finalTotal * 1e9)),
+          payload: btoa(JSON.stringify(payload))
+        }]
+      };
+      const result = await tonConnectUI.sendTransaction(tx);
+      alert(`Payment sent! Total: $${finalTotal.toFixed(2)}\nTx: ${result.boc}`);
+      new QRCode(document.getElementById("qr-area"), {
+        text: result.boc, width: 240, height: 240,
+        colorDark: "#FFD700", colorLight: "#000"
+      });
+    } catch (e) {
+      alert("Payment failed: " + e.message);
+    }
+  };
+
+  // EVENT LISTENERS — CRITICAL ORDER
+  document.getElementById('step1').addEventListener('click', e => {
+    const card = e.target.closest('.option-card');
+    if (card) {
+      document.querySelectorAll('#step1 .option-card').forEach(c => c.classList.remove('selected'));
+      card.classList.add('selected');
+      state.isLocal = card.dataset.value === 'no';
+      next(2);
+      if (state.isLocal) renderParishes();
+    }
+  });
+
+  document.getElementById('startBtn').addEventListener('click', () => {
+    console.log("Start button clicked → going to step 1");
+    next(1);
+    setTimeout(() => {
+      const yesCard = document.querySelector('#step1 .option-card[data-value="yes"]');
+      if (yesCard) yesCard.click();
+    }, 100);
+  });
+
+  document.getElementById('btn2').onclick = () => {
+    state.from = document.getElementById('fromCity').value;
+    if (!state.from) return alert("Choose your city!");
+    if (!state.isLocal) { loadFlights(); next(2.5); } else { next(3); }
+  };
+
+  document.getElementById('step25').addEventListener('click', e => {
+    const card = e.target.closest('.option-card');
+    if (card && card.dataset.flight === 'skip') {
+      document.querySelectorAll('#step25 .option-card').forEach(c => c.classList.remove('selected'));
+      card.classList.add('selected');
+      state.flight = null;
+    }
+  });
+
+  document.getElementById('btnFlight').onclick = () => {
+    if (state.flight) {
+      document.getElementById('arriveDate').value = state.flight.arrive;
+      document.getElementById('departDate').value = state.flight.depart;
+      calcNightsFromDates();
+    }
+    next(3);
+  };
+
+  ['adults','kids'].forEach(id => {
+    document.getElementById(id).onchange = e => { state[id] = +e.target.value; updateCalc(true); };
+  });
+
+  document.getElementById('minus').onclick = () => { if (state.nights > 1) { state.nights--; document.getElementById('nightCount').textContent = state.nights; updateCalc(true); } };
+  document.getElementById('plus').onclick = () => { state.nights++; document.getElementById('nightCount').textContent = state.nights; updateCalc(true); };
+
+  document.getElementById('departDate').addEventListener('change', calcNightsFromDates);
+
+  document.getElementById('btn3').onclick = () => {
+    state.arrive = document.getElementById('arriveDate').value;
+    state.depart = document.getElementById('departDate').value;
+    if (!state.arrive || !state.depart) return alert("Pick both dates!");
+    next(4);
+    renderParishes();
+  };
+
+  document.getElementById('parishNext').onclick = () => {
+    if (!state.parish) return alert("Choose parish!");
+    next(5);
+  };
+
+  document.getElementById('btnVibe').onclick = () => {
+    const sel = document.querySelector('#step5 .option-card.selected');
+    if (!sel) return alert("Choose vibe!");
+    state.vibe = sel.dataset.value;
+    loadStays();
+    next(6);
+  };
+
+  document.getElementById('btnStay').onclick = () => {
+    if (!state.stay) return alert("Pick stay!");
+    loadTransport();
+    next(7);
+  };
+
+  document.getElementById('btnTransport').onclick = () => { loadTours(); next(8); };
+  document.getElementById('btnTours').onclick = showSummary;
+
+  document.getElementById('step5').addEventListener('click', e => {
+    const card = e.target.closest('.option-card');
+    if (card) {
+      document.querySelectorAll('#step5 .option-card').forEach(c => c.classList.remove('selected'));
+      card.classList.add('selected');
+    }
+  });
+
+  // BACK BUTTONS
+  document.querySelectorAll('.btn.back').forEach(btn => {
+    btn.onclick = back;
+  });
+  document.getElementById('backSummary').onclick = () => next(8);
 
   // === INIT ===
   updateProgress();
